<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/door_state_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_intro_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/door_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/door_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/door_state_intro"
        tools:text="Open"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/door_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/door_state" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_close"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/button_unlock"
        app:layout_constraintEnd_toStartOf="@id/button_lock"
        app:layout_constraintStart_toEndOf="@id/button_open"
        app:layout_constraintTop_toBottomOf="@+id/door_state"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lock"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/button_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_close"
        app:layout_constraintTop_toTopOf="@+id/button_close" />

    <Button
        android:id="@+id/button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_open"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/button_close"
        app:layout_constraintEnd_toStartOf="@+id/button_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_close" />

    <Button
        android:id="@+id/button_unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_unlock"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_strike_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_close" />

    <Button
        android:id="@+id/button_strike_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_strike_lock"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/button_unlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_unlock"
        app:layout_constraintTop_toTopOf="@+id/button_unlock" />

</androidx.constraintlayout.widget.ConstraintLayout>